--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,15 +17,24 @@ nav {
 }
 .left-menu {
   display: flex;
+  align-items: center;
 }
 .name {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   font-size: 40px;
+  font-style: italic;
+  cursor: pointer;
 }
-
+.menu-size {
+  font-size: 20px;
+}
 .right-menu {
   display: flex;
+}
+.menu-icon i:hover {
+  color: #4b4949;
+  transition: color 0.3s ease-in-out;
 }
 nav a {
   color: white;
@@ -34,7 +43,8 @@ nav a {
   font-size: 16px;
 }
 nav a:hover {
-  text-decoration: underline;
+  text-decoration: underline rgb(90, 88, 88);
+  transition: text-decoration 0.3s ease-in;
 }
 .products {
   display: flex;
